# presentations

./: README.org
fmam-wwww/: fmam-wwww.md  white-mod.css
fmam-wwww/fmam-examples/: README.md  fmam-examples.cabal
fmam-wwww/fmam-examples/src/: Lib.hs
getting-started-with-haskell/: getting-started-with-haskell.md
servant-docs-docker-and-sses/: servant-docs-docker-and-sses.org
web-services-in-haskell/: web-services-in-haskell.md
web-services-in-haskell/linksio/: README.md  docker-compose.yml  linksio.cabal  stack.yaml
web-services-in-haskell/linksio/app/: Main.hs
web-services-in-haskell/linksio/src/: LinksAPI.hs  LinksApp.hs  LinksData.hs  LinksDocs.hs  LinksServer.hs
why-fp-matters-me-remix/: why-fp-matters-me-remix.md
why-haskell-for-fp/: .gitignore  WhyHaskell.hs  why-haskell-for-fp.md  why-haskell-for-fp.org
