name:                fmam-examples
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/fmam-examples#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       async
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers >= 0.5.7.1
  default-language:    Haskell2010

executable fmam-examples-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fmam-examples
  default-language:    Haskell2010

test-suite fmam-examples-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fmam-examples
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/fmam-examples
